# SantaClaus

./: CMakeLists.txt  ConveyorBelts.cpp  ConveyorBelts.h  IConveyorBelt.cpp  IConveyorBelt.h  IElf.h  ITable.cpp  ITable.h  Object.cpp  Object.h  PapaXmasElf.cpp  PapaXmasElf.h  README.md  Santa.cpp  SendGifts.cpp  Tables.cpp  Tables.h  Toy.cpp  Toy.h  Wrap.cpp  Wrap.h  main.cpp  santa.cpp
